[gd_scene load_steps=7 format=3 uid="uid://dmj6j2iiws0d5"]

[ext_resource type="Script" uid="uid://vpd11jf5gwnh" path="res://v_box_menu.gd" id="1_yqeox"]

[sub_resource type="SystemFont" id="SystemFont_vjb58"]

[sub_resource type="Theme" id="Theme_con2f"]
default_font = SubResource("SystemFont_vjb58")
default_font_size = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vjb58"]
bg_color = Color(0.099986, 0.099986, 0.099986, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_con2f"]
bg_color = Color(0.099986, 0.099986, 0.099986, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yqeox"]
bg_color = Color(0.0728426, 0.0728426, 0.0728426, 0.854902)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_con2f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1
script = ExtResource("1_yqeox")

[node name="Score" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SCORE
. - ."
horizontal_alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Set Controllers"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Reset Score"

[node name="A" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="A"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vjb58")

[node name="Label" type="Label" parent="A/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -34.5
offset_right = 20.0
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
text = "Player 1

Press Space
or
Xbox B/Playstation X"
horizontal_alignment = 1

[node name="B" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="B"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_con2f")

[node name="Label" type="Label" parent="B/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -34.5
offset_right = 20.0
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
text = "Player 2

Press Space
or
Xbox B/Playstation X"
horizontal_alignment = 1

[node name="Loading" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yqeox")

[node name="Label" type="Label" parent="Loading"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -34.5
offset_right = 20.0
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
text = "Loading..."

[connection signal="pressed" from="VBoxContainer/Button" to="VBoxContainer" method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="VBoxContainer" method="_on_button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="VBoxContainer" method="_on_button3_pressed"]
